# ai-office-workflow

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  environment.py  inference.py  memory.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py
data/: task1_emails.json  task2_emails.json  task3_emails.json
graders/: __init__.py  grader_task1.py  grader_task2.py  grader_task3.py
server/: app.py
tests/: test_environment.py  test_graders.py  test_inference.py
