[project]
name = "ai-office-workflow"
version = "0.1.0"
description = "AI Office Workflow OpenEnv Environment"
authors = [
    { name = "Sai Sankeerth" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[tool.openenv]
entrypoint = "inference.py"